--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,8 @@
 // Font Families
 $sans-serif: 'Oswald', sans-serif;
 $serif: 'Merriweather', serif;
+
+// Breakpoints
+$small: 450px;
+$medium: 680px;
+$large: 1000px;
