--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,15 @@
   font-family: "Oswald", sans-serif;
 }
 
+.article {
+  margin: auto;
+  max-width: 600px;
+  width: 600px;
+}
+
 .main {
   display: grid;
-  grid-template-areas: "article-nav" "article-content";
-}
-
-.article-nav {
-  grid-area: article-nav;
-}
-
-.article-content {
-  grid-area: article-content;
-}
-
-@media (min-width: 680px) {
-  .main {
-    grid-template-areas: "article-nav  article-content";
-  }
+  grid-template-columns: 150px 450px;
 }
 
 /*# sourceMappingURL=style.css.map */
