--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -6,7 +6,18 @@
   font-family: $sans-serif;
 }
 
-address.authors {
+%small-font {
   font-size: .75rem;
   line-height: 1.2rem;
+}
+
+address.authors {
+  @extend %small-font;
+}
+
+a.author-link {
+  @extend %small-font;
+  text-decoration: none;
+  color: $link-color;
+  font-weight: bold;
 }
