--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,5 +7,8 @@ $small: 450px;
 $medium: 680px;
 $large: 1000px;
 
-// Color Palet
+// Color Palette
 $link-color: #5f91bb;
+
+// Border
+$border: 1px solid #dddddd;
