--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -32,6 +32,21 @@ a.author-link {
   font-weight: bold;
 }
 
-.article-nav, .article-content {
+.article-content {
   @extend %small-font;
+}
+
+.article-nav {
+  font-size: .75rem;
+  line-height: 1.5rem;
+}
+
+.nav-level-1 a {
+  color: black;
+  text-decoration: none;
+}
+
+.nav-level-2 a {
+  color: $link-color;
+  text-decoration: none;
 }
