--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,11 @@ $medium: 680px;
 $large: 1000px;
 
 // Color Palette
-$link-color: #5f91bb;
+$primary-dark: #000000;
+$primary-medium: #f4f4f4;
+$primary-light: #ffffff;
+
+$accent-1: #5f91bb;
 
 // Border
 $border: 1px solid #dddddd;
