--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,9 +72,9 @@
 }
 
 .nav-level-1-active {
-  background-color: #f4f4f4;
+  background-color: $primary-medium;
 }
 
 a.nav-level-2-active {
-  color: black;
+  color: $primary-dark;
 }
