--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,3 +1,10 @@
+// Font Size Class to @extend
+%small-font {
+  font-size: .75rem;
+  line-height: 1.5rem;
+}
+
+// Font Family Classes
 .serif {
   font-family: $serif;
 }
@@ -6,11 +13,7 @@
   font-family: $sans-serif;
 }
 
-%small-font {
-  font-size: .75rem;
-  line-height: 1.2rem;
-}
-
+// Header Typography
 .cat-date-container {
   @extend %small-font;
   font-weight: bold;
@@ -32,13 +35,14 @@ a.author-link {
   font-weight: bold;
 }
 
+// Article Content Typography
+
 .article-content {
   @extend %small-font;
 }
 
 .article-nav {
-  font-size: .75rem;
-  line-height: 1.5rem;
+  @extend %small-font;
 }
 
 .nav-level-1 a {
