--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,13 +1,16 @@
 // Font Families
+//-------------------------------
 $sans-serif: 'Oswald', sans-serif;
 $serif: 'Merriweather', serif;
 
 // Breakpoints
+//-------------------------------
 $small: 450px;
 $medium: 680px;
 $large: 1000px;
 
 // Color Palette
+//-------------------------------
 $primary-dark: #000000;
 $primary-medium: #f4f4f4;
 $primary-light: #ffffff;
@@ -15,4 +18,5 @@ $primary-light: #ffffff;
 $accent-1: #5f91bb;
 
 // Border
+//-------------------------------
 $border: 1px solid #dddddd;
