--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.cat-date-container, address.authors, a.author-link, .article-content, .article-nav {
+.cat-date-container, address.authors, a.author-link, .article-nav, .article-content {
   font-size: .75rem;
   line-height: 1.5rem;
 }
@@ -66,10 +66,6 @@ a.author-link {
   width: 125px;
 }
 
-.article-content {
-  width: 440px;
-}
-
 .table-of-contents {
   border-top: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
@@ -93,6 +89,14 @@ a.author-link {
   padding-left: 1rem;
 }
 
+.nav-level-1-active {
+  background-color: #f4f4f4;
+}
+
+a.nav-level-2-active {
+  color: #000000;
+}
+
 .share-links {
   margin: .5rem;
   display: flex;
@@ -100,15 +104,8 @@ a.author-link {
 }
 
 .article-content {
+  width: 440px;
   border-top: 1px solid #dddddd;
-}
-
-.nav-level-1-active {
-  background-color: #f4f4f4;
-}
-
-a.nav-level-2-active {
-  color: #000000;
 }
 
 /*# sourceMappingURL=style.css.map */
